--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "funcunit": "3.0.0",
     "moment": "2.10.3"
   },
+  "devDependencies": {
+    "steal-qunit": "0.0.4",
+    "funcunit": "3.0.0"
+  },
   "system": {
   }
 }
