--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,7 @@
 language: node_js
 node_js: node
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+notifications:
+  slack: bitovi:a6EZ5xpLzrpMgCYyvKwfkmN5
