--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "readme": "ERROR: No README data found!"
   "scripts": {
-    "test": "DEBUG=testee:* testee tests.html"
+    "test": "testee tests.html --browsers firefox"
   },
   "author": "Bitovi",
   "license": "MIT",
