--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "lodash-amd": "3.9.3",
     "jquery": "2.2.1",
-    "can": "2.3.17",
+    "can": "^2.3.0",
     "font-awesome": "4.3.0",
     "bootstrap": "3.3.4",
     "browser-cookie-lite": "1.0.4",
